# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/car": {
             "post": {
-                "description": "Analyze a text query",
+                "description": "Create a new car",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "analyze"
+                    "car"
                 ],
                 "parameters": [
                     {
@@ -25,6 +25,71 @@
                         "schema": {
                             "$ref": "#/definitions/http.Car"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/car/{hsn}": {
+            "get": {
+                "description": "Get car by hsn",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "manufacturer"
+                ],
+                "summary": "Get car by hsn",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "hsn",
+                        "name": "hsn",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/car/{hsn}/{tsn}": {
+            "get": {
+                "description": "Get car by hsn and tsn",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "car"
+                ],
+                "summary": "Get car by hsn and tsn",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "hsn",
+                        "name": "hsn",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tsn",
+                        "name": "tsn",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
