# internal/handler/http/car.go
@@ -7,10 +7,10 @@ import (
 
 type CarService interface {
 	Create(car *model.CarCreate) error
-	GetCarByHsnTsn(hsn, tsn string) (*model.Car, error)
+	ByHsnTsn(hsn, tsn string) (*model.Car, error)
 }
 
-type CarHandler struct {
+type car struct {
 	carService CarService
 }
 
@@ -21,31 +21,31 @@ type Car struct {
 	Manufacturer string `json:"manufacturer"`
 }
 
-func NewCarHandler(carService CarService) *CarHandler {
-	return &CarHandler{carService}
+func NewCarHandler(carService CarService) *car {
+	return &car{carService}
 }
 
-func (h *CarHandler) Route(api fiber.Router) {
-	api.Post("/car", h.CreateCar)
-	api.Get("/car/:hsn/:tsn", h.GetCarByHsnTsn)
+func (handler *car) Route(api fiber.Router) {
+	api.Post("/car", handler.Create)
+	api.Get("/car/:hsn/:tsn", handler.ByHsnTsn)
 }
 
-// CreateCar
+// Create
 // @Summary
-// @Description Analyze a text query
-// @Tags analyze
+// @Description Create a new car
+// @Tags car
 // @Accept json
 // @Produce json
 // @Param Car body Car true "Car object"
 // @Success 200
 // @Router /api/car [post]
-func (h *CarHandler) CreateCar(c *fiber.Ctx) error {
+func (handler *car) Create(c *fiber.Ctx) error {
 	car := new(Car)
 	if err := c.BodyParser(car); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
 	}
 
-	err := h.carService.Create(&model.CarCreate{
+	err := handler.carService.Create(&model.CarCreate{
 		Name:         car.Name,
 		Hsn:          car.Hsn,
 		Tsn:          car.Tsn,
@@ -58,11 +58,21 @@ func (h *CarHandler) CreateCar(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"message": "Car created successfully"})
 }
 
-func (h *CarHandler) GetCarByHsnTsn(c *fiber.Ctx) error {
+// ByHsnTsn
+// @Summary Get car by hsn and tsn
+// @Description Get car by hsn and tsn
+// @Tags car
+// @Accept json
+// @Produce json
+// @Param hsn path string true "hsn"
+// @Param tsn path string true "tsn"
+// @Success 200
+// @Router /api/car/{hsn}/{tsn} [get]
+func (handler *car) ByHsnTsn(c *fiber.Ctx) error {
 	hsn := c.Params("hsn")
 	tsn := c.Params("tsn")
 
-	car, err := h.carService.GetCarByHsnTsn(hsn, tsn)
+	car, err := handler.carService.ByHsnTsn(hsn, tsn)
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err.Error()})
 	}
